UIP-2638: Fix Dropdown List spacing

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -803,7 +803,7 @@ input[type=file] {
             &__spacer {
                 @include text-value;
 
-                padding: 0 25px;
+                padding: 0 45px;
                 height: 0;
                 display: block;
                 visibility: hidden;
